--- a/components/containers.less
+++ b/components/containers.less
@@ -1,28 +1,29 @@
-@media (min-width: @xs-screen) {
-  .container {
-    width: 750px;
-  }
-}
+
 @media (min-width: @sm-screen) {
   .container {
-    width: 970px;
+    width: @sm-container;
   }
 }
 @media (min-width: @md-screen) {
   .container {
-    width: 1170px;
+    width: @md-container;
   }
 }
 @media (min-width: @lg-screen) {
   .container {
-    width: 1170px;
+    width: @lg-container;
+  }
+}
+@media (min-width: @xl-screen) {
+  .container {
+    width: @xl-container;
   }
 }
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: (@gutter / 2);
+  padding-right: (@gutter / 2);
     
 }
 .full-screen-container {
@@ -30,6 +31,6 @@
   margin-left: auto;
 }
 .row {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -(@gutter / 2);
+  margin-right: -(@gutter / 2);
 }
