--- a/components/variables.less
+++ b/components/variables.less
@@ -1,5 +1,20 @@
-@dxs-screen : 0px;
-@xs-screen : 468px;
-@sm-screen : 767px;
-@md-screen : 991px;
-@lg-screen : 1200px;
+/* Screen sizes */
+@xs-screen : 0px;
+@sm-screen : 468px;
+@md-screen : 767px;
+@lg-screen : 991px;
+@xl-screen : 1200px;
+
+/* Gutter sizes */
+
+@gutter : 30px;
+
+/* Container widths */
+
+@sm-container : (@sm-screen - @gutter);
+@md-container : (@md-screen - @gutter);
+@lg-container : (@lg-screen - @gutter);
+@xl-container : (@xl-screen - @gutter);
+
+
+
