added all the grid classes for xs, sm, md, lg, xl

--- a/components/containers.less
+++ b/components/containers.less
@@ -1,3 +1,6 @@
+/*Container Size is determined from variables with a gutter given based on the gutter variable */
+
+
 
 @media (min-width: @sm-screen) {
   .container {
