--- a/components/grid-constants.css
+++ b/components/grid-constants.css
@@ -1,64 +1,64 @@
-.col-xs-1,
-.col-sm-1,
-.col-md-1,
-.col-lg-1,
-.col-xs-2,
-.col-sm-2,
-.col-md-2,
-.col-lg-2,
-.col-xs-3,
-.col-sm-3,
-.col-md-3,
-.col-lg-3,
-.col-xs-4,
-.col-sm-4,
-.col-md-4,
-.col-lg-4,
-.col-xs-5,
-.col-sm-5,
-.col-md-5,
-.col-lg-5,
-.col-xs-6,
-.col-sm-6,
-.col-md-6,
-.col-lg-6,
-.col-xs-7,
-.col-sm-7,
-.col-md-7,
-.col-lg-7,
-.col-xs-8,
-.col-sm-8,
-.col-md-8,
-.col-lg-8,
-.col-xs-9,
-.col-sm-9,
-.col-md-9,
-.col-lg-9,
-.col-xs-10,
-.col-sm-10,
-.col-md-10,
-.col-lg-10,
-.col-xs-11,
-.col-sm-11,
-.col-md-11,
-.col-lg-11,
-.col-xs-12,
-.col-sm-12,
-.col-md-12,
-.col-lg-12,
-.col-xl-1,
-.col-xl-2,
-.col-xl-3,
-.col-xl-3,
-.col-xl-4,
-.col-xl-5,
-.col-xl-6,
-.col-xl-7,
-.col-xl-8,
-.col-xl-9,
-.col-xl-10,
-.col-xl-11,
-.col-xl-12 {
+.xs-1,
+.sm-1,
+.md-1,
+.lg-1,
+.xs-2,
+.sm-2,
+.md-2,
+.lg-2,
+.xs-3,
+.sm-3,
+.md-3,
+.lg-3,
+.xs-4,
+.sm-4,
+.md-4,
+.lg-4,
+.xs-5,
+.sm-5,
+.md-5,
+.lg-5,
+.xs-6,
+.sm-6,
+.md-6,
+.lg-6,
+.xs-7,
+.sm-7,
+.md-7,
+.lg-7,
+.xs-8,
+.sm-8,
+.md-8,
+.lg-8,
+.xs-9,
+.sm-9,
+.md-9,
+.lg-9,
+.xs-10,
+.sm-10,
+.md-10,
+.lg-10,
+.xs-11,
+.sm-11,
+.md-11,
+.lg-11,
+.xs-12,
+.sm-12,
+.md-12,
+.lg-12,
+.xl-1,
+.xl-2,
+.xl-3,
+.xl-3,
+.xl-4,
+.xl-5,
+.xl-6,
+.xl-7,
+.xl-8,
+.xl-9,
+.xl-10,
+.xl-11,
+.xl-12 {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
