--- a/components/grid-lg.less
+++ b/components/grid-lg.less
@@ -1,155 +1,155 @@
 @media (min-width: @lg-screen ) {
-    .col-lg-12 {
+    .lg-12 {
         width: 100%;
     }
-    .col-lg-11 {
+    .lg-11 {
         width: 91.66666667%;
     }
-    .col-lg-10 {
+    .lg-10 {
         width: 83.33333333%;
     }
-    .col-lg-9 {
+    .lg-9 {
         width: 75%;
     }
-    .col-lg-8 {
+    .lg-8 {
         width: 66.66666667%;
     }
-    .col-lg-7 {
+    .lg-7 {
         width: 58.33333333%;
     }
-    .col-lg-6 {
+    .lg-6 {
         width: 50%;
     }
-    .col-lg-5 {
+    .lg-5 {
         width: 41.66666667%;
     }
-    .col-lg-4 {
+    .lg-4 {
         width: 33.33333333%;
     }
-    .col-lg-3 {
+    .lg-3 {
         width: 25%;
     }
-    .col-lg-2 {
+    .lg-2 {
         width: 16.66666667%;
     }
-    .col-lg-1 {
+    .lg-1 {
         width: 8.33333333%;
     }
-    .col-lg-pull-12 {
+    .lg-pull-12 {
         right: 100%;
     }
-    .col-lg-pull-11 {
+    .lg-pull-11 {
         right: 91.66666667%;
     }
-    .col-lg-pull-10 {
+    .lg-pull-10 {
         right: 83.33333333%;
     }
-    .col-lg-pull-9 {
+    .lg-pull-9 {
         right: 75%;
     }
-    .col-lg-pull-8 {
+    .lg-pull-8 {
         right: 66.66666667%;
     }
-    .col-lg-pull-7 {
+    .lg-pull-7 {
         right: 58.33333333%;
     }
-    .col-lg-pull-6 {
+    .lg-pull-6 {
         right: 50%;
     }
-    .col-lg-pull-5 {
+    .lg-pull-5 {
         right: 41.66666667%;
     }
-    .col-lg-pull-4 {
+    .lg-pull-4 {
         right: 33.33333333%;
     }
-    .col-lg-pull-3 {
+    .lg-pull-3 {
         right: 25%;
     }
-    .col-lg-pull-2 {
+    .lg-pull-2 {
         right: 16.66666667%;
     }
-    .col-lg-pull-1 {
+    .lg-pull-1 {
         right: 8.33333333%;
     }
-    .col-lg-pull-0 {
+    .lg-pull-0 {
         right: auto;
     }
-    .col-lg-push-12 {
+    .lg-push-12 {
         left: 100%;
     }
-    .col-lg-push-11 {
+    .lg-push-11 {
         left: 91.66666667%;
     }
-    .col-lg-push-10 {
+    .lg-push-10 {
         left: 83.33333333%;
     }
-    .col-lg-push-9 {
+    .lg-push-9 {
         left: 75%;
     }
-    .col-lg-push-8 {
+    .lg-push-8 {
         left: 66.66666667%;
     }
-    .col-lg-push-7 {
+    .lg-push-7 {
         left: 58.33333333%;
     }
-    .col-lg-push-6 {
+    .lg-push-6 {
         left: 50%;
     }
-    .col-lg-push-5 {
+    .lg-push-5 {
         left: 41.66666667%;
     }
-    .col-lg-push-4 {
+    .lg-push-4 {
         left: 33.33333333%;
     }
-    .col-lg-push-3 {
+    .lg-push-3 {
         left: 25%;
     }
-    .col-lg-push-2 {
+    .lg-push-2 {
         left: 16.66666667%;
     }
-    .col-lg-push-1 {
+    .lg-push-1 {
         left: 8.33333333%;
     }
-    .col-lg-push-0 {
+    .lg-push-0 {
         left: auto;
     }
-    .col-lg-offset-12 {
+    .lg-offset-12 {
         margin-left: 100%;
     }
-    .col-lg-offset-11 {
+    .lg-offset-11 {
         margin-left: 91.66666667%;
     }
-    .col-lg-offset-10 {
+    .lg-offset-10 {
         margin-left: 83.33333333%;
     }
-    .col-lg-offset-9 {
+    .lg-offset-9 {
         margin-left: 75%;
     }
-    .col-lg-offset-8 {
+    .lg-offset-8 {
         margin-left: 66.66666667%;
     }
-    .col-lg-offset-7 {
+    .lg-offset-7 {
         margin-left: 58.33333333%;
     }
-    .col-lg-offset-6 {
+    .lg-offset-6 {
         margin-left: 50%;
     }
-    .col-lg-offset-5 {
+    .lg-offset-5 {
         margin-left: 41.66666667%;
     }
-    .col-lg-offset-4 {
+    .lg-offset-4 {
         margin-left: 33.33333333%;
     }
-    .col-lg-offset-3 {
+    .lg-offset-3 {
         margin-left: 25%;
     }
-    .col-lg-offset-2 {
+    .lg-offset-2 {
         margin-left: 16.66666667%;
     }
-    .col-lg-offset-1 {
+    .lg-offset-1 {
         margin-left: 8.33333333%;
     }
-    .col-lg-offset-0 {
+    .lg-offset-0 {
         margin-left: 0%;
     }
 }
