--- a/components/grid-xl.less
+++ b/components/grid-xl.less
@@ -1,155 +1,155 @@
 @media (min-width: @xl-screen ) {
-    .col-xl-12 {
+    .xl-12 {
         width: 100%;
     }
-    .col-xl-11 {
+    .xl-11 {
         width: 91.66666667%;
     }
-    .col-xl-10 {
+    .xl-10 {
         width: 83.33333333%;
     }
-    .col-xl-9 {
+    .xl-9 {
         width: 75%;
     }
-    .col-xl-8 {
+    .xl-8 {
         width: 66.66666667%;
     }
-    .col-xl-7 {
+    .xl-7 {
         width: 58.33333333%;
     }
-    .col-xl-6 {
+    .xl-6 {
         width: 50%;
     }
-    .col-xl-5 {
+    .xl-5 {
         width: 41.66666667%;
     }
-    .col-xl-4 {
+    .xl-4 {
         width: 33.33333333%;
     }
-    .col-xl-3 {
+    .xl-3 {
         width: 25%;
     }
-    .col-xl-2 {
+    .xl-2 {
         width: 16.66666667%;
     }
-    .col-xl-1 {
+    .xl-1 {
         width: 8.33333333%;
     }
-    .col-xl-pull-12 {
+    .xl-pull-12 {
         right: 100%;
     }
-    .col-xl-pull-11 {
+    .xl-pull-11 {
         right: 91.66666667%;
     }
-    .col-xl-pull-10 {
+    .xl-pull-10 {
         right: 83.33333333%;
     }
-    .col-xl-pull-9 {
+    .xl-pull-9 {
         right: 75%;
     }
-    .col-xl-pull-8 {
+    .xl-pull-8 {
         right: 66.66666667%;
     }
-    .col-xl-pull-7 {
+    .xl-pull-7 {
         right: 58.33333333%;
     }
-    .col-xl-pull-6 {
+    .xl-pull-6 {
         right: 50%;
     }
-    .col-xl-pull-5 {
+    .xl-pull-5 {
         right: 41.66666667%;
     }
-    .col-xl-pull-4 {
+    .xl-pull-4 {
         right: 33.33333333%;
     }
-    .col-xl-pull-3 {
+    .xl-pull-3 {
         right: 25%;
     }
-    .col-xl-pull-2 {
+    .xl-pull-2 {
         right: 16.66666667%;
     }
-    .col-xl-pull-1 {
+    .xl-pull-1 {
         right: 8.33333333%;
     }
-    .col-xl-pull-0 {
+    .xl-pull-0 {
         right: auto;
     }
-    .col-xl-push-12 {
+    .xl-push-12 {
         left: 100%;
     }
-    .col-xl-push-11 {
+    .xl-push-11 {
         left: 91.66666667%;
     }
-    .col-xl-push-10 {
+    .xl-push-10 {
         left: 83.33333333%;
     }
-    .col-xl-push-9 {
+    .xl-push-9 {
         left: 75%;
     }
-    .col-xl-push-8 {
+    .xl-push-8 {
         left: 66.66666667%;
     }
-    .col-xl-push-7 {
+    .xl-push-7 {
         left: 58.33333333%;
     }
-    .col-xl-push-6 {
+    .xl-push-6 {
         left: 50%;
     }
-    .col-xl-push-5 {
+    .xl-push-5 {
         left: 41.66666667%;
     }
-    .col-xl-push-4 {
+    .xl-push-4 {
         left: 33.33333333%;
     }
-    .col-xl-push-3 {
+    .xl-push-3 {
         left: 25%;
     }
-    .col-xl-push-2 {
+    .xl-push-2 {
         left: 16.66666667%;
     }
-    .col-xl-push-1 {
+    .xl-push-1 {
         left: 8.33333333%;
     }
-    .col-xl-push-0 {
+    .xl-push-0 {
         left: auto;
     }
-    .col-xl-offset-12 {
+    .xl-offset-12 {
         margin-left: 100%;
     }
-    .col-xl-offset-11 {
+    .xl-offset-11 {
         margin-left: 91.66666667%;
     }
-    .col-xl-offset-10 {
+    .xl-offset-10 {
         margin-left: 83.33333333%;
     }
-    .col-xl-offset-9 {
+    .xl-offset-9 {
         margin-left: 75%;
     }
-    .col-xl-offset-8 {
+    .xl-offset-8 {
         margin-left: 66.66666667%;
     }
-    .col-xl-offset-7 {
+    .xl-offset-7 {
         margin-left: 58.33333333%;
     }
-    .col-xl-offset-6 {
+    .xl-offset-6 {
         margin-left: 50%;
     }
-    .col-xl-offset-5 {
+    .xl-offset-5 {
         margin-left: 41.66666667%;
     }
-    .col-xl-offset-4 {
+    .xl-offset-4 {
         margin-left: 33.33333333%;
     }
-    .col-xl-offset-3 {
+    .xl-offset-3 {
         margin-left: 25%;
     }
-    .col-xl-offset-2 {
+    .xl-offset-2 {
         margin-left: 16.66666667%;
     }
-    .col-xl-offset-1 {
+    .xl-offset-1 {
         margin-left: 8.33333333%;
     }
-    .col-xl-offset-0 {
+    .xl-offset-0 {
         margin-left: 0%;
     }
 }
