Added demo page, added box-sizing:border-box

--- a/components/containers.less
+++ b/components/containers.less
@@ -1,7 +1,8 @@
 /*Container Size is determined from variables with a gutter given based on the gutter variable */
-
-
-
+.container {
+  margin-left: auto;
+  margin-right: auto;
+}
 @media (min-width: @sm-screen) {
   .container {
     width: @sm-container;
