--- a/wysgrid.less
+++ b/wysgrid.less
@@ -6,3 +6,26 @@
 @import "components/grid-md.less";
 @import "components/grid-lg.less";
 @import "components/grid-xl.less";
+
+.clearfix:before,
+.clearfix:after,
+.container:before,
+.container:after,
+.container-fluid:before,
+.container-fluid:after,
+.full-screen-container:before,
+.full-screen-container:after,
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
+}
+.clearfix:after,
+.container:after,
+.container-fluid:after,
+.row:after {
+  clear: both;
+}
+* {
+  transition: 1.5s all;
+}
