Updated for mobile or desktop first - updated the demo file

--- a/desktop_first/wysgrid.less
+++ b/desktop_first/wysgrid.less
@@ -7,8 +7,6 @@
 @import "components/grid-sm.less";
 @import "components/grid-xs.less";
 
-.clearfix:before,
-.clearfix:after,
 .container:before,
 .container:after,
 .container-fluid:before,
@@ -20,9 +18,9 @@
   content: " ";
   display: table;
 }
-.clearfix:after,
 .container:after,
 .container-fluid:after,
+.full-screen-container:after,
 .row:after {
   clear: both;
 }
