--- a/mobile_first/components/grid-lg.less
+++ b/mobile_first/components/grid-lg.less
@@ -1,4 +1,7 @@
 @media (min-width: @lg-screen ) {
+    .lg-1, .lg-2, .lg-3, .lg-4, .lg-5, .lg-6, .lg-7, .lg-8, .lg-9, .lg-10, .lg-11, .lg-12 {
+        float: left;
+    }
     .lg-12 {
         width: 100%;
     }
