--- a/desktop_first/components/containers.less
+++ b/desktop_first/components/containers.less
@@ -9,7 +9,9 @@
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
+  padding-left: (@gutter / 2);
+  padding-right: (@gutter / 2);
+  width: @lg-screen - @gutter;
 }
 @media (max-width: @lg-screen) {
   .container {
@@ -41,6 +43,10 @@
 .full-screen-container {
   margin-right: auto;
   margin-left: auto;
+  .row {
+  margin-left: 0;
+  margin-right: 0;
+  }
 }
 .row {
   margin-left: -(@gutter / 2);
