--- a/desktop_first/components/grid-sm.less
+++ b/desktop_first/components/grid-sm.less
@@ -1,4 +1,7 @@
 @media (max-width: @sm-screen ) {
+    .sm-1, .sm-2, .sm-3, .sm-4, .sm-5, .sm-6, .sm-7, .sm-8, .sm-9, .sm-10, .sm-11, .sm-12 {
+        float: left;
+    }
     .sm-12 {
         width: 100%;
     }
