--- a/desktop_first/components/grid-xl.css
+++ b/desktop_first/components/grid-xl.css
@@ -1,3 +1,17 @@
+.xl-1,
+.xl-2,
+.xl-3,
+.xl-4,
+.xl-5,
+.xl-6,
+.xl-7,
+.xl-8,
+.xl-9,
+.xl-10,
+.xl-11,
+.xl-12 {
+  float: left;
+}
 .xl-12 {
   width: 100%;
 }
