--- a/desktop_first/components/grid-xl.less
+++ b/desktop_first/components/grid-xl.less
@@ -1,3 +1,6 @@
+.xl-1, .xl-2, .xl-3, .xl-4, .xl-5, .xl-6, .xl-7, .xl-8, .xl-9, .xl-10, .xl-11, .xl-12 {
+    float: left;
+}
 .xl-12 {
     width: 100%;
 }
@@ -49,6 +52,7 @@
 .xl-pull-8 {
     right: 66.66666667%;
 }
+
 .xl-pull-7 {
     right: 58.33333333%;
 }
