--- a/mobile_first/components/grid-xs.less
+++ b/mobile_first/components/grid-xs.less
@@ -1,3 +1,6 @@
+.xs-1, .xs-2, .xs-3, .xs-4, .xs-5, .xs-6, .xs-7, .xs-8, .xs-9, .xs-10, .xs-11, .xs-12 {
+    float: left;
+}
 .xs-12 {
     width: 100%;
 }
