--- a/mobile_first/wysgrid.css
+++ b/mobile_first/wysgrid.css
@@ -5,6 +5,8 @@
 .container {
   margin-left: auto;
   margin-right: auto;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 @media (min-width: 468px) {
   .container {
@@ -36,11 +38,21 @@
   margin-right: auto;
   margin-left: auto;
 }
+.full-screen-container .row {
+  margin-left: 0;
+  margin-right: 0;
+}
 .row {
   margin-left: -5px;
   margin-right: -5px;
 }
 * {
+  box-sizing: border-box;
+}
+*:before {
+  box-sizing: border-box;
+}
+*:after {
   box-sizing: border-box;
 }
 .xs-1,
@@ -107,6 +119,19 @@
   min-height: 1px;
   padding-left: 5px;
   padding-right: 5px;
+}
+.xs-1,
+.xs-2,
+.xs-3,
+.xs-4,
+.xs-5,
+.xs-6,
+.xs-7,
+.xs-8,
+.xs-9,
+.xs-10,
+.xs-11,
+.xs-12 {
   float: left;
 }
 .xs-12 {
@@ -263,6 +288,20 @@
   margin-left: 0%;
 }
 @media (min-width: 468px) {
+  .sm-1,
+  .sm-2,
+  .sm-3,
+  .sm-4,
+  .sm-5,
+  .sm-6,
+  .sm-7,
+  .sm-8,
+  .sm-9,
+  .sm-10,
+  .sm-11,
+  .sm-12 {
+    float: left;
+  }
   .sm-12 {
     width: 100%;
   }
@@ -418,6 +457,20 @@
   }
 }
 @media (min-width: 768px) {
+  .md-1,
+  .md-2,
+  .md-3,
+  .md-4,
+  .md-5,
+  .md-6,
+  .md-7,
+  .md-8,
+  .md-9,
+  .md-10,
+  .md-11,
+  .md-12 {
+    float: left;
+  }
   .md-12 {
     width: 100%;
   }
@@ -573,6 +626,20 @@
   }
 }
 @media (min-width: 992px) {
+  .lg-1,
+  .lg-2,
+  .lg-3,
+  .lg-4,
+  .lg-5,
+  .lg-6,
+  .lg-7,
+  .lg-8,
+  .lg-9,
+  .lg-10,
+  .lg-11,
+  .lg-12 {
+    float: left;
+  }
   .lg-12 {
     width: 100%;
   }
@@ -728,6 +795,20 @@
   }
 }
 @media (min-width: 1200px) {
+  .xl-1,
+  .xl-2,
+  .xl-3,
+  .xl-4,
+  .xl-5,
+  .xl-6,
+  .xl-7,
+  .xl-8,
+  .xl-9,
+  .xl-10,
+  .xl-11,
+  .xl-12 {
+    float: left;
+  }
   .xl-12 {
     width: 100%;
   }
