Added a variable for creating columns(work in progress)

--- a/mobile_first/components/containers.less
+++ b/mobile_first/components/containers.less
@@ -1,6 +1,6 @@
 /*Container Size is determined from variables with a gutter given based on the gutter variable */
 /* Container widths */
-
+@import "variables.less";
 @sm-container : (@sm-screen - @gutter);
 @md-container : (@md-screen - @gutter);
 @lg-container : (@lg-screen - @gutter);
